Revert "drm/i915/gem: Allow EXEC_CAPTURE on recoverable contexts on DG1" (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53561,6 +53561,7 @@
 	patches.suse/gve-add-missing-NULL-check-for-gve_alloc_pending_pac.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
+	patches.suse/Revert-drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverabl.patch
 	patches.suse/drm-xe-Make-xe_gt_freq-part-of-the-Documentation.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
 	patches.suse/drm-i915-guc-Check-if-expecting-reply-before-decreme.patch
