drm/xe/guc_submit: add back fix (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53571,6 +53571,7 @@
 	patches.suse/drm-xe-vm-move-rebind_work-init-earlier.patch
 	patches.suse/drm-xe-Rework-eviction-rejection-of-bound-external-b.patch
 	patches.suse/drm-xe-sched-stop-re-submitting-signalled-jobs.patch
+	patches.suse/drm-xe-guc_submit-add-back-fix.patch
 	patches.suse/drm-xe-Create-LRC-BO-without-VM.patch
 	patches.suse/drm-xe-remove-unmatched-xe_vm_unlock-from-__xe_exec_.patch
 	patches.suse/drm-amd-display-Add-debugging-message-for-brightness.patch
