--- a/series.conf
+++ b/series.conf
@@ -49244,6 +49244,7 @@
 	patches.suse/drm-sched-memset-job-in-drm_sched_job_init.patch
 	patches.suse/drm-panfrost-Remove-unused-id_mask-from-struct-panfr.patch
 	patches.suse/drm-nouveau-gr-gf100-Fix-missing-unlock-in-gf100_gr_.patch
+	patches.suse/accel-ivpu-Remove-copy-engine-support.patch
 	patches.suse/accel-ivpu-Increase-DMA-address-range.patch
 	patches.suse/drm-zynqmp_kms-Unplug-DRM-device-before-removal.patch
 	patches.suse/drm-xlnx-zynqmp_disp-layer-may-be-null-while-releasi.patch
