accel/ivpu: Separate DB ID and CMDQ ID allocations from CMDQ allocation (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7305,6 +7305,7 @@
 	patches.suse/drm-allow-encoder-mode_set-even-when-connectors-chan.patch
 	patches.suse/drm-Add-valid-clones-check.patch
 	patches.suse/drm-ssd130x-Set-SPI-.id_table-to-prevent-an-SPI-core.patch
+	patches.suse/accel-ivpu-Separate-DB-ID-and-CMDQ-ID-allocations-fr.patch
 	patches.suse/accel-ivpu-Abort-all-jobs-after-command-queue-unregi.patch
 	patches.suse/accel-ivpu-Fix-locking-order-in-ivpu_job_submit.patch
 	patches.suse/accel-ivpu-Add-handling-of-VPU_JSM_STATUS_MVNCI_CONT.patch
