ALSA: hda: Ignore unsol events for cards being shut down (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9567,6 +9567,7 @@
 	patches.suse/KVM-s390-rename-PROT_NONE-to-PROT_TYPE_DUMMY.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Lenovo-Thinkpad-Thund.patch
 	patches.suse/ALSA-hda-Add-new-pci-id-for-AMD-GPU-display-HD-audio.patch
+	patches.suse/ALSA-hda-Ignore-unsol-events-for-cards-being-shut-do.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-RODE-.patch
 	patches.suse/ASoC-ti-omap-hdmi-Re-add-dai_link-platform-to-fix-ca.patch
 	patches.suse/ASoC-codecs-hda-Fix-RPM-usage-count-underflow.patch
