--- a/series.conf
+++ b/series.conf
@@ -9697,6 +9697,7 @@
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
+	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
