--- a/series.conf
+++ b/series.conf
@@ -9528,6 +9528,7 @@
 	patches.suse/tty-serial-8250_omap-fix-TX-with-DMA-for-am33xx.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-typec-displayport-Receive-DP-Status-Update-NAK-r.patch
+	patches.suse/usb-gadget-f_hid-wake-up-readers-on-disable-unbind.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-acpi-Prevent-null-pointer-dereference-in-usb_acp.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
