misc: tps6594-pfsm: Add NULL pointer check in tps6594_pfsm_probe() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9499,6 +9499,7 @@
 	patches.suse/accel-ivpu-Trigger-device-recovery-on-engine-reset-r.patch
 	patches.suse/video-screen_info-Update-framebuffers-behind-PCI-bri.patch
 	patches.suse/sysfb-Fix-screen_info-type-check-for-VGA.patch
+	patches.suse/misc-tps6594-pfsm-Add-NULL-pointer-check-in-tps6594_.patch
 	patches.suse/msft-hv-3247-uio_hv_generic-Set-event-for-all-channels-on-the-dev.patch
 	patches.suse/fpga-fix-potential-null-pointer-deref-in-fpga_mgr_te.patch
 	patches.suse/bus-mhi-ep-Update-read-pointer-only-after-buffer-is-.patch
