drm/bridge: ti-sn65dsi86: Add HPD for DisplayPort connector type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9718,6 +9718,7 @@
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
 	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
+	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/serial-core-restore-of_node-information-in-sysfs.patch
