accel/ivpu: Remove copy engine support (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1310,6 +1310,7 @@
 	patches.suse/drm-sched-memset-job-in-drm_sched_job_init.patch
 	patches.suse/drm-panfrost-Remove-unused-id_mask-from-struct-panfr.patch
 	patches.suse/drm-nouveau-gr-gf100-Fix-missing-unlock-in-gf100_gr_.patch
+	patches.suse/accel-ivpu-Remove-copy-engine-support.patch
 	patches.suse/accel-ivpu-Use-xa_alloc_cyclic-instead-of-custom-fun.patch
 	patches.suse/accel-ivpu-Increase-DMA-address-range.patch
 	patches.suse/drm-zynqmp_kms-Unplug-DRM-device-before-removal.patch
