--- a/series.conf
+++ b/series.conf
@@ -9526,6 +9526,7 @@
 	patches.suse/serial-jsm-fix-NPE-during-jsm_uart_port_init.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/tty-serial-8250_omap-fix-TX-with-DMA-for-am33xx.patch
+	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-acpi-Prevent-null-pointer-dereference-in-usb_acp.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
