amd/amdkfd: fix a kfd_process ref leak (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9476,6 +9476,7 @@
 	patches.suse/drm-xe-Make-xe_gt_freq-part-of-the-Documentation.patch
 	patches.suse/drm-amdgpu-seq64-memory-unmap-uses-uninterruptible-l.patch
 	patches.suse/drm-amdgpu-amdgpu_vram_mgr_new-Clamp-lpfn-to-total-v.patch
+	patches.suse/amd-amdkfd-fix-a-kfd_process-ref-leak.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
 	patches.suse/drm-i915-guc-Check-if-expecting-reply-before-decreme.patch
 	patches.suse/drm-i915-psr-Fix-using-wrong-mask-in-REG_FIELD_PREP.patch
