ASoC: codecs: wcd9335: Fix missing free of regulator supplies (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9569,6 +9569,7 @@
 	patches.suse/ALSA-hda-Add-new-pci-id-for-AMD-GPU-display-HD-audio.patch
 	patches.suse/ALSA-hda-Ignore-unsol-events-for-cards-being-shut-do.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-RODE-.patch
+	patches.suse/ASoC-codecs-wcd9335-Fix-missing-free-of-regulator-su.patch
 	patches.suse/ASoC-ti-omap-hdmi-Re-add-dai_link-platform-to-fix-ca.patch
 	patches.suse/ASoC-codecs-hda-Fix-RPM-usage-count-underflow.patch
 	patches.suse/ASoC-Intel-avs-Fix-deadlock-when-the-failing-IPC-is-.patch
