drm/amdkfd: Fix instruction hazard in gfx12 trap handler (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6445,6 +6445,7 @@
 	patches.suse/drm-amdgpu-Remove-JPEG-from-vega-and-carrizo-video-c.patch
 	patches.suse/drm-amd-pm-add-unique_id-for-gfx12.patch
 	patches.suse/drm-amdgpu-pm-wire-up-hwmon-fan-speed-for-smu-14.0.2.patch
+	patches.suse/drm-amdkfd-Fix-instruction-hazard-in-gfx12-trap-hand.patch
 	patches.suse/drm-amdgpu-gfx12-correct-cleanup-of-me-field-with-gf.patch
 	patches.suse/drm-amdgpu-Restore-uncached-behaviour-on-GFX12.patch
 	patches.suse/drm-amdkfd-Fix-user-queue-validation-on-Gfx7-8.patch
