drm/amdgpu: Add kicker device detection (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9671,6 +9671,7 @@
 	patches.suse/drm-i915-dsi-Fix-off-by-one-in-BXT_MIPI_TRANS_VTOTAL.patch
 	patches.suse/drm-amd-display-Fix-mpv-playback-corruption-on-westo.patch
 	patches.suse/drm-amd-display-Fix-RMCM-programming-seq-errors.patch
+	patches.suse/drm-amdgpu-Add-kicker-device-detection.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
