drm/amdkfd: Fix race in GWS queue scheduling (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9675,6 +9675,7 @@
 	patches.suse/drm-amd-display-Check-dce_hwseq-before-dereferencing.patch
 	patches.suse/drm-amdgpu-Fix-SDMA-UTC_L1-handling-during-start-sto.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
+	patches.suse/drm-amdkfd-Fix-race-in-GWS-queue-scheduling.patch
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-v3d-Avoid-NULL-pointer-dereference-in-v3d_job_up.patch
