net: phy: realtek: add RTL8125D-internal PHY (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -831,6 +831,7 @@
 	patches.suse/ethtool-rss-prevent-rss-ctx-deletion-when-in-use.patch
 	patches.suse/net-phy-realtek-merge-the-drivers-for-internal-NBase.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
+	patches.suse/net-phy-realtek-add-RTL8125D-internal-PHY.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
 	patches.suse/net-mlx5-Introduce-node-type-to-rate-group-structure.patch
