drm/amdgpu: Fix SDMA UTC_L1 handling during start/stop sequences (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9673,6 +9673,7 @@
 	patches.suse/drm-amd-display-Fix-RMCM-programming-seq-errors.patch
 	patches.suse/drm-amdgpu-Add-kicker-device-detection.patch
 	patches.suse/drm-amd-display-Check-dce_hwseq-before-dereferencing.patch
+	patches.suse/drm-amdgpu-Fix-SDMA-UTC_L1-handling-during-start-sto.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
