--- a/series.conf
+++ b/series.conf
@@ -9522,6 +9522,7 @@
 	patches.suse/iio-adc-mcp3911-fix-device-dependent-mappings-for-co.patch
 	patches.suse/iio-adc-ti-ads1298-Kconfig-add-kfifo-dependency-to-f.patch
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
+	patches.suse/8250-microchip-pci1xxxx-Add-PCIe-Hot-reset-disable-s.patch
 	patches.suse/serial-jsm-fix-NPE-during-jsm_uart_port_init.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/tty-serial-8250_omap-fix-TX-with-DMA-for-am33xx.patch
