usb: Add checks for snprintf() calls in usb_alloc_dev() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9530,6 +9530,7 @@
 	patches.suse/usb-typec-displayport-Receive-DP-Status-Update-NAK-r.patch
 	patches.suse/usb-gadget-f_hid-wake-up-readers-on-disable-unbind.patch
 	patches.suse/usb-cdc-wdm-avoid-setting-WDM_READ-for-ZLP-s.patch
+	patches.suse/usb-Add-checks-for-snprintf-calls-in-usb_alloc_dev.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-acpi-Prevent-null-pointer-dereference-in-usb_acp.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
