--- a/series.conf
+++ b/series.conf
@@ -9570,6 +9570,7 @@
 	patches.suse/ALSA-hda-Ignore-unsol-events-for-cards-being-shut-do.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-RODE-.patch
 	patches.suse/ASoC-codecs-wcd9335-Fix-missing-free-of-regulator-su.patch
+	patches.suse/ASoC-rt1320-fix-speaker-noise-when-volume-bar-is-100.patch
 	patches.suse/ASoC-ti-omap-hdmi-Re-add-dai_link-platform-to-fix-ca.patch
 	patches.suse/ASoC-codecs-hda-Fix-RPM-usage-count-underflow.patch
 	patches.suse/ASoC-Intel-avs-Fix-deadlock-when-the-failing-IPC-is-.patch
