--- a/series.conf
+++ b/series.conf
@@ -829,6 +829,7 @@
 	patches.suse/gve-add-support-for-basic-queue-stats.patch
 	patches.suse/neighbour-Use-rtnl_register_many.patch
 	patches.suse/ethtool-rss-prevent-rss-ctx-deletion-when-in-use.patch
+	patches.suse/net-phy-realtek-merge-the-drivers-for-internal-NBase.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
