PCI: apple: Fix missing OF node reference in apple_pcie_setup_port (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9425,6 +9425,7 @@
 	patches.suse/PCI-dwc-ep-Correct-PBA-offset-in-.set_msix-callback.patch
 	patches.suse/PCI-cadence-ep-Correct-PBA-offset-in-.set_msix-callb.patch
 	patches.suse/PCI-apple-Set-only-available-ports-up.patch
+	patches.suse/PCI-apple-Fix-missing-OF-node-reference-in-apple_pci.patch
 	patches.suse/PCI-apple-Use-gpiod_set_value_cansleep-in-probe-flow.patch
 	patches.suse/PCI-cadence-Fix-runtime-atomic-count-underflow.patch
 	patches.suse/PCI-dw-rockchip-Remove-PCIE_L0S_ENTRY-check-from-roc.patch
