wifi: mac80211: Add link iteration macro for link data (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9070,6 +9070,7 @@
 	patches.suse/netfilter-bridge-Move-specific-fragmented-packet-to-slow_p.patch
 	patches.suse/netfilter-nft_quota-match-correctly-when-the-quota-just-de.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
+	patches.suse/wifi-mac80211-Add-link-iteration-macro-for-link-data.patch
 	patches.suse/wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 	patches.suse/wifi-ath12k-Pass-correct-values-of-center-freq1-and-.patch
 	patches.suse/wifi-ath12k-fix-incorrect-CE-addresses.patch
