--- a/series.conf
+++ b/series.conf
@@ -9516,6 +9516,7 @@
 	patches.suse/iio-filter-admv8818-Support-frequencies-2-32.patch
 	patches.suse/iio-adc-ad7124-Fix-3dB-filter-frequency-reading.patch
 	patches.suse/iio-adc-ad_sigma_delta-Fix-use-of-uninitialized-stat.patch
+	patches.suse/iio-pressure-zpa2326-Use-aligned_s64-for-the-timesta.patch
 	patches.suse/staging-iio-ad5933-Correct-settling-cycles-encoding-.patch
 	patches.suse/iio-adc-PAC1934-fix-typo-in-documentation-link.patch
 	patches.suse/iio-adc-mcp3911-fix-device-dependent-mappings-for-co.patch
