drm/scheduler: signal scheduled fence when kill job (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9490,6 +9490,7 @@
 	patches.suse/drm-amd-display-Correct-non-OLED-pre_T11_delay.patch
 	patches.suse/drm-amd-display-Add-debugging-message-for-brightness.patch
 	patches.suse/drm-amd-display-Fix-default-DC-and-AC-levels.patch
+	patches.suse/drm-scheduler-signal-scheduled-fence-when-kill-job.patch
 	patches.suse/dummycon-Trigger-redraw-when-switching-consoles-with.patch
 	patches.suse/accel-ivpu-Improve-buffer-object-logging.patch
 	patches.suse/accel-ivpu-Use-firmware-names-from-upstream-repo.patch
