types: Complement the aligned types with signed 64-bit one (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -2424,6 +2424,7 @@
 	patches.suse/firmware_loader-Fix-possible-resource-leak-in-fw_log.patch
 	patches.suse/sysfs-attribute_group-allow-registration-of-const-bi.patch
 	patches.suse/misc-apds990x-Fix-missing-pm_runtime_disable.patch
+	patches.suse/types-Complement-the-aligned-types-with-signed-64-bi.patch
 	patches.suse/iio-light-al3010-Fix-an-error-handling-path-in-al301.patch
 	patches.suse/iio-adc-ad7606-Fix-typo-in-the-driver-name.patch
 	patches.suse/iio-dac-adi-axi-dac-fix-wrong-register-bitfield.patch
