--- a/series.conf
+++ b/series.conf
@@ -8983,6 +8983,7 @@
 	patches.suse/drm-vmwgfx-Add-error-path-for-xa_store-in-vmw_bo_add.patch
 	patches.suse/drm-vmwgfx-Fix-dumb-buffer-leak.patch
 	patches.suse/drm-udl-Unregister-device-before-cleaning-up-on-disc.patch
+	patches.suse/drm-bridge-ti-sn65dsi86-make-use-of-debugfs_init-cal.patch
 	patches.suse/drm-panic-add-missing-space.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-connecting-to-next-bridge.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-phy-de-init-and-flag-it-so.patch
