--- a/series.conf
+++ b/series.conf
@@ -9432,6 +9432,7 @@
 	patches.suse/PCI-dw-rockchip-Fix-PHY-function-call-sequence-in-ro.patch
 	patches.suse/PCI-dwc-ep-Fix-errno-typo.patch
 	patches.suse/PCI-dwc-Make-link-training-more-robust-by-setting-PO.patch
+	patches.suse/PCI-imx6-Add-workaround-for-errata-ERR051624.patch
 	patches.suse/PCI-rcar-gen4-set-ep-BAR4-fixed-size.patch
 	patches.suse/phy-qcom-qmp-usb-Fix-an-NULL-vs-IS_ERR-bug.patch
 	patches.suse/dmaengine-ti-Add-NULL-check-in-udma_probe.patch
