--- a/series.conf
+++ b/series.conf
@@ -9533,6 +9533,7 @@
 	patches.suse/usb-Add-checks-for-snprintf-calls-in-usb_alloc_dev.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-common-usb-conn-gpio-use-a-unique-name-for-usb-c.patch
+	patches.suse/usb-potential-integer-overflow-in-usbg_make_tpg.patch
 	patches.suse/usb-acpi-Prevent-null-pointer-dereference-in-usb_acp.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
 	patches.suse/thunderbolt-Do-not-double-dequeue-a-configuration-re.patch
