drm/amdkfd: remove gfx 12 trap handler page size cap (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1362,6 +1362,7 @@
 	patches.suse/drm-use-ATOMIC64_INIT-for-atomic64_t.patch
 	patches.suse/drm-panfrost-Add-missing-OPP-table-refcnt-decrementa.patch
 	patches.suse/drm-panthor-Fix-OPP-refcnt-leaks-in-devfreq-initiali.patch
+	patches.suse/drm-amdkfd-remove-gfx-12-trap-handler-page-size-cap.patch
 	patches.suse/drm-amdgpu-fix-ACA-bank-count-boundary-check-error.patch
 	patches.suse/drm-amdgpu-Fix-map-unmap-queue-logic.patch
 	patches.suse/drm-amdkfd-Fix-wrong-usage-of-INIT_WORK.patch
