drm/amd/display: Correct non-OLED pre_T11_delay (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9487,6 +9487,7 @@
 	patches.suse/drm-xe-guc_submit-add-back-fix.patch
 	patches.suse/drm-xe-Create-LRC-BO-without-VM.patch
 	patches.suse/drm-xe-remove-unmatched-xe_vm_unlock-from-__xe_exec_.patch
+	patches.suse/drm-amd-display-Correct-non-OLED-pre_T11_delay.patch
 	patches.suse/drm-amd-display-Add-debugging-message-for-brightness.patch
 	patches.suse/drm-amd-display-Fix-default-DC-and-AC-levels.patch
 	patches.suse/dummycon-Trigger-redraw-when-switching-consoles-with.patch
