- accel/ivpu: Do not fail on cmdq if failed to allocate preemption   buffers (stable-fixes). - Refresh   patches.suse/accel-ivpu-Use-xa_alloc_cyclic-instead-of-custom-fun.patch.

--- a/series.conf
+++ b/series.conf
@@ -1277,6 +1277,7 @@
 	patches.suse/accel-ivpu-Add-auto-selection-logic-for-job-schedule.patch
 	patches.suse/accel-ivpu-Make-DB_ID-and-JOB_ID-allocations-increme.patch
 	patches.suse/accel-ivpu-Prevent-recovery-invocation-during-probe-.patch
+	patches.suse/accel-ivpu-Do-not-fail-on-cmdq-if-failed-to-allocate.patch
 	patches.suse/accel-ivpu-Add-initial-Panther-Lake-support.patch
 	patches.suse/accel-ivpu-Update-power-island-delays.patch
 	patches.suse/drm-bridge-tc358767-Fix-link-properties-discovery.patch
