- accel/ivpu: Make command queue ID allocated on XArray   (stable-fixes). - Refresh   patches.suse/accel-ivpu-Fix-locking-order-in-ivpu_job_submit.patch.

--- a/series.conf
+++ b/series.conf
@@ -1312,6 +1312,7 @@
 	patches.suse/drm-nouveau-gr-gf100-Fix-missing-unlock-in-gf100_gr_.patch
 	patches.suse/accel-ivpu-Remove-copy-engine-support.patch
 	patches.suse/accel-ivpu-Use-xa_alloc_cyclic-instead-of-custom-fun.patch
+	patches.suse/accel-ivpu-Make-command-queue-ID-allocated-on-XArray.patch
 	patches.suse/accel-ivpu-Increase-DMA-address-range.patch
 	patches.suse/drm-zynqmp_kms-Unplug-DRM-device-before-removal.patch
 	patches.suse/drm-xlnx-zynqmp_disp-layer-may-be-null-while-releasi.patch
