--- a/series.conf
+++ b/series.conf
@@ -9773,6 +9773,7 @@
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
 	patches.suse/usb-cdnsp-Fix-issue-with-CV-Bad-Descriptor-test.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
+	patches.suse/usb-typec-displayport-Fix-potential-deadlock.patch
 	patches.suse/usb-dwc3-gadget-Fix-TRB-reclaim-logic-for-short-tran.patch
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
