--- a/series.conf
+++ b/series.conf
@@ -31782,6 +31782,7 @@
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
 	patches.suse/objtool-Fix-segfault-in-ignore_unreachable_insn.patch
 	patches.suse/objtool-Silence-more-KCOV-warnings-part-2.patch
+	patches.suse/objtool-Ignore-end-of-section-jumps-for-KCOV-GCOV.patch
 	patches.suse/x86-paravirt-Move-halt-paravirt-calls-under-CONFIG_PARAVIR.patch
 	patches.suse/x86-tdx-Fix-arch_safe_halt-execution-for-TDX-VMs.patch
 	patches.suse/x86-tdx-Emit-warning-if-IRQs-are-enabled-during-HLT-VE-han.patch
