fs/jfs: consolidate sanity checking in dbMount (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31548,6 +31548,7 @@
 	patches.suse/fs-jfs-Prevent-integer-overflow-in-AG-size-calculation.patch
 	patches.suse/jfs-Prevent-copying-of-nlink-with-value-0-from-disk-inode.patch
 	patches.suse/jfs-add-sanity-check-for-agwidth-in-dbMount.patch
+	patches.suse/fs-jfs-consolidate-sanity-checking-in-dbMount.patch
 	patches.suse/jfs-add-index-corruption-check-to-DT_GETPAGE.patch
 	patches.suse/ext4-protect-ext4_release_dquot-against-freezing.patch
 	patches.suse/ext4-add-missing-brelse-for-bh2-in-ext4_dx_add_entry.patch
