sunrpc: don't immediately retransmit on seqno miss (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32628,6 +32628,7 @@
 	patches.suse/mfd-max14577-Fix-wakeup-source-leaks-on-device-unbin.patch
 	patches.suse/leds-multicolor-Fix-intensity-setting-while-SW-blink.patch
 	patches.suse/backlight-pm8941-Add-NULL-check-in-wled_configure.patch
+	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
 	patches.suse/nfs-clear-SB_RDONLY-before-getting-superblock.patch
 	patches.suse/nfs-ignore-SB_RDONLY-when-remounting-nfs.patch
