NFSv4: Always set NLINK even if the server doesn't support it (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32632,6 +32632,7 @@
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
 	patches.suse/NFSv4.2-fix-listxattr-to-return-selinux-security-label.patch
+	patches.suse/NFSv4-Always-set-NLINK-even-if-the-server-doesn-t-support-it.patch
 	patches.suse/nfs-clear-SB_RDONLY-before-getting-superblock.patch
 	patches.suse/nfs-ignore-SB_RDONLY-when-remounting-nfs.patch
 	patches.suse/SUNRPC-Prevent-hang-on-NFS-mount-with-xprtsec-m-tls.patch
