--- a/blacklist.conf
+++ b/blacklist.conf
@@ -950,3 +950,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 87c259a7a359e73e6c52c68fcbec79988999b4e6 # only for CONFIG_LOCKDEP
 1bf67c8fdbda21fadd564a12dbe2b13c1ea5eda7 # fixes/adds feature to obsolete cpuset FS
 975776841e689dd8ba36df9fa72ac3eca3c2957a # only for CONFIG_SMP=n
+1d31d536871fe8b16c8c0de58d201c78e21eb3a2 # only on SPARC32
