--- a/blacklist.conf
+++ b/blacklist.conf
@@ -952,3 +952,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 975776841e689dd8ba36df9fa72ac3eca3c2957a # only for CONFIG_SMP=n
 1d31d536871fe8b16c8c0de58d201c78e21eb3a2 # only on SPARC32
 0d6efa20e384a41a7f4afdcd8a0aec442c19d33e # only on SPARC32
+66db876162155c1cec87359cd78c62aaafde9257 # architecture not compiled
