--- a/blacklist.conf
+++ b/blacklist.conf
@@ -953,3 +953,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 1d31d536871fe8b16c8c0de58d201c78e21eb3a2 # only on SPARC32
 0d6efa20e384a41a7f4afdcd8a0aec442c19d33e # only on SPARC32
 66db876162155c1cec87359cd78c62aaafde9257 # architecture not compiled
+1224b218a4b9203656ecc932152f4c81a97b4fcc # selected anyway
