blacklist.conf: not a fix

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -955,3 +955,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 66db876162155c1cec87359cd78c62aaafde9257 # architecture not compiled
 1224b218a4b9203656ecc932152f4c81a97b4fcc # selected anyway
 22bbc1dcd0d6785fb390c41f0dd5b5e218d23bdd # cleanup that can break compilation
+791a9ed0a40dfa70fe793dcecf950273255cbb84 # cleanup, not a fix
