NFSv4: xattr handlers should check for absent nfs filehandles (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9391,6 +9391,7 @@
 	patches.suse/backlight-pm8941-Add-NULL-check-in-wled_configure.patch
 	patches.suse/cxl-core-region-ignore-interleave-granularity-when-w.patch
 	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
+	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
 	patches.suse/NFSv4-Don-t-check-for-OPEN-feature-support-in-v4.1.patch
 	patches.suse/nfs-clear-SB_RDONLY-before-getting-superblock.patch
