NFSv4.2: fix listxattr to return selinux security label (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9394,6 +9394,7 @@
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
 	patches.suse/NFSv4.2-fix-setattr-caching-of-TIME_-MODIFY-ACCESS-_SET-when-timestamps-are-delegated.patch
+	patches.suse/NFSv4.2-fix-listxattr-to-return-selinux-security-label.patch
 	patches.suse/NFSv4-Don-t-check-for-OPEN-feature-support-in-v4.1.patch
 	patches.suse/nfs-clear-SB_RDONLY-before-getting-superblock.patch
 	patches.suse/nfs-ignore-SB_RDONLY-when-remounting-nfs.patch
