--- a/series.conf
+++ b/series.conf
@@ -9396,6 +9396,7 @@
 	patches.suse/NFSv4.2-fix-setattr-caching-of-TIME_-MODIFY-ACCESS-_SET-when-timestamps-are-delegated.patch
 	patches.suse/NFSv4.2-fix-listxattr-to-return-selinux-security-label.patch
 	patches.suse/NFSv4-Don-t-check-for-OPEN-feature-support-in-v4.1.patch
+	patches.suse/NFSv4-Always-set-NLINK-even-if-the-server-doesn-t-support-it.patch
 	patches.suse/nfs-clear-SB_RDONLY-before-getting-superblock.patch
 	patches.suse/nfs-ignore-SB_RDONLY-when-remounting-nfs.patch
 	patches.suse/SUNRPC-Prevent-hang-on-NFS-mount-with-xprtsec-m-tls.patch
