usb: cdnsp: Fix issue with resuming from L1 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32199,6 +32199,7 @@
 	patches.suse/staging-axis-fifo-Correct-handling-of-tx_fifo_depth-.patch
 	patches.suse/staging-axis-fifo-Remove-hardware-resets-for-user-er.patch
 	patches.suse/usb-gadget-tegra-xudc-ACK-ST_RC-after-clearing-CTRL_.patch
+	patches.suse/usb-cdnsp-Fix-issue-with-resuming-from-L1.patch
 	patches.suse/usb-host-tegra-Prevent-host-controller-crash-when-OT.patch
 	patches.suse/usb-gadget-f_ecm-Add-get_status-callback.patch
 	patches.suse/usb-gadget-Use-get_status-callback-to-set-remote-wak.patch
