struct cdns: move new member to the end (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33456,6 +33456,7 @@
 	patches.kabi/truct-dwc3-hide-new-member-wakeup_pending_funcs.patch
 	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
+	patches.kabi/struct-cdns-move-new-member-to-the-end.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
