struct ucsi_operations: use padding for new operation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33566,6 +33566,7 @@
 	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
 	patches.kabi/struct-cdns-move-new-member-to-the-end.patch
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
+	patches.kabi/struct-ucsi_operations-use-padding-for-new-operation.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
