--- a/series.conf
+++ b/series.conf
@@ -25467,6 +25467,7 @@
 	patches.suse/usb-gadget-dummy_hcd-Switch-to-hrtimer-transfer-sche.patch
 	patches.suse/usb-gadget-dummy_hcd-Set-transfer-interval-to-1-micr.patch
 	patches.suse/usb-typec-ucsi-add-callback-for-connector-status-upd.patch
+	patches.suse/usb-typec-ucsi-glink-move-GPIO-reading-into-connecto.patch
 	patches.suse/usb-dwc3-core-Skip-setting-event-buffers-for-host-on.patch
 	patches.suse/usb-xhci-prevent-potential-failure-in-handle_tx_even.patch
 	patches.suse/xhci-pci-Use-full-names-in-PCI-IDs-for-Intel-platfor.patch
@@ -33567,6 +33568,7 @@
 	patches.kabi/struct-cdns-move-new-member-to-the-end.patch
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
 	patches.kabi/struct-ucsi_operations-use-padding-for-new-operation.patch
+	patches.kabi/ucsi-glink-adapt-to-kABI-consistency.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
