virtgpu: don't reset on shutdown (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8255,6 +8255,7 @@
 	patches.suse/writeback-fix-false-warning-in-inode_to_wb.patch
 	patches.suse/ima-process_measurement-needlessly-takes-inode_lock-.patch
 	patches.suse/btrfs-zoned-return-EIO-on-RAID1-block-group-write-po.patch
+	patches.suse/virtgpu-don-t-reset-on-shutdown.patch
 	patches.suse/virtio_console-fix-missing-byte-order-handling-for-c.patch
 	patches.suse/vhost-scsi-protect-vq-log_used-with-vq-mutex.patch
 	patches.suse/vhost-scsi-Fix-vhost_scsi_send_bad_target.patch
