--- a/blacklist.conf
+++ b/blacklist.conf
@@ -988,3 +988,4 @@ ed17aa92dc56b6d8883e4b7a8f1c6fbf5ed6cd29 # incomplete fix that got reverted
 349f0086ba8b2a169877d21ff15a4d9da3a60054 # we don't build 32b x86
 826cc42adf44930a633d11a5993676d85ddb0842 # CVE-2024-56693 bsc#1235418 comment 18
 1b0449544c6482179ac84530b61fc192a6527bfd # CVE-2025-37834 https://bugzilla.suse.com/show_bug.cgi?id=1242925#c1
+5356266552bbaaddb8d6b4b53450e290be2cd717 # CVE-2022-49138 duplicate with f48735a9aaf8258f39918e13adf464ccd7dce33b
