virtgpu: don't reset on shutdown (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32029,6 +32029,7 @@
 	patches.suse/nfsd-decrease-sc_count-directly-if-fail-to-queue-dl_recall.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
 	patches.suse/ima-process_measurement-needlessly-takes-inode_lock-.patch
+	patches.suse/virtgpu-don-t-reset-on-shutdown.patch
 	patches.suse/virtio_console-fix-missing-byte-order-handling-for-c.patch
 	patches.suse/vhost-scsi-protect-vq-log_used-with-vq-mutex.patch
 	patches.suse/crypto-atmel-sha204a-Set-hwrng-quality-to-lowest-pos.patch
