dm: lock limits when reading them (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9424,6 +9424,7 @@
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
+	patches.suse/dm-lock-limits-when-reading-them.patch
 	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
