--- a/series.conf
+++ b/series.conf
@@ -9426,6 +9426,7 @@
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
 	patches.suse/dm-lock-limits-when-reading-them.patch
 	patches.suse/dm-flakey-error-all-IOs-when-num_features-is-absent.patch
+	patches.suse/dm-flakey-make-corrupting-read-bios-work.patch
 	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
