dm-mirror: fix a tiny race condition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9429,6 +9429,7 @@
 	patches.suse/dm-flakey-make-corrupting-read-bios-work.patch
 	patches.suse/dm-table-Set-BLK_FEAT_ATOMIC_WRITES-for-target-queue.patch
 	patches.suse/dm-vdo-indexer-don-t-read-request-structure-after-en.patch
+	patches.suse/dm-mirror-fix-a-tiny-race-condition.patch
 	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
