--- a/series.conf
+++ b/series.conf
@@ -32641,6 +32641,7 @@
 	patches.suse/mfd-max14577-Fix-wakeup-source-leaks-on-device-unbin.patch
 	patches.suse/leds-multicolor-Fix-intensity-setting-while-SW-blink.patch
 	patches.suse/backlight-pm8941-Add-NULL-check-in-wled_configure.patch
+	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
