--- a/series.conf
+++ b/series.conf
@@ -32643,6 +32643,7 @@
 	patches.suse/backlight-pm8941-Add-NULL-check-in-wled_configure.patch
 	patches.suse/dm-don-t-change-md-if-dm_table_set_restrictions-fail.patch
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
+	patches.suse/dm-flakey-error-all-IOs-when-num_features-is-absent.patch
 	patches.suse/sunrpc-don-t-immediately-retransmit-on-seqno-miss.patch
 	patches.suse/NFSv4-xattr-handlers-should-check-for-absent-nfs-filehandles.patch
 	patches.suse/fs-nfs-read-fix-double-unlock-bug-in-nfs_return_empty_folio.patch
