--- a/series.conf
+++ b/series.conf
@@ -32830,6 +32830,7 @@
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
+	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
