ASoC: cs35l56: probe() should fail if the device ID is not recognized (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32911,6 +32911,7 @@
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
+	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 
 	########################################################
 	# end of sorted patches
