--- a/series.conf
+++ b/series.conf
@@ -32910,6 +32910,7 @@
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 
 	########################################################
 	# end of sorted patches
