--- a/series.conf
+++ b/series.conf
@@ -53879,6 +53879,7 @@
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/ASoC-fsl_sai-Force-a-software-reset-when-starting-in.patch
 
 	########################################################
 	# end of sorted patches
