--- a/series.conf
+++ b/series.conf
@@ -9810,6 +9810,7 @@
 	patches.suse/ASoC-fsl_sai-Force-a-software-reset-when-starting-in.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/pwm-Fix-invalid-state-detection.patch
+	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
