--- a/series.conf
+++ b/series.conf
@@ -9806,6 +9806,7 @@
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/ALSA-ad1816a-Fix-potential-NULL-pointer-deref-in-snd.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
+	patches.suse/ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-select-SN.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
