ALSA: ad1816a: Fix potential NULL pointer deref in snd_card_ad1816a_pnp() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9804,6 +9804,7 @@
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/ALSA-ad1816a-Fix-potential-NULL-pointer-deref-in-snd.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
