pwm: Fix invalid state detection (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9809,6 +9809,7 @@
 	patches.suse/ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-select-SN.patch
 	patches.suse/ASoC-fsl_sai-Force-a-software-reset-when-starting-in.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
+	patches.suse/pwm-Fix-invalid-state-detection.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
