--- a/series.conf
+++ b/series.conf
@@ -23621,6 +23621,7 @@
 	patches.suse/remoteproc-virtio-Fix-wdg-cannot-recovery-remote-pro.patch
 	patches.suse/remoteproc-stm32-Fix-incorrect-type-assignment-retur.patch
 	patches.suse/usb-audio-v2-Correct-comments-for-struct-uac_clock_s.patch
+	patches.suse/ucsi_ccg-Refine-the-UCSI-Interrupt-handling.patch
 	patches.suse/xhci-Add-helper-to-set-an-interrupters-interrupt-mod.patch
 	patches.suse/xhci-remove-unnecessary-event_ring_deq-parameter-fro.patch
 	patches.suse/xhci-update-event-ring-dequeue-pointer-position-to-c.patch
