usb: typec: ucsi: Add qcm6490-pmic-glink as needing PDOS quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -23622,6 +23622,7 @@
 	patches.suse/remoteproc-stm32-Fix-incorrect-type-assignment-retur.patch
 	patches.suse/usb-audio-v2-Correct-comments-for-struct-uac_clock_s.patch
 	patches.suse/ucsi_ccg-Refine-the-UCSI-Interrupt-handling.patch
+	patches.suse/usb-typec-ucsi-Add-qcm6490-pmic-glink-as-needing-PDO.patch
 	patches.suse/xhci-Add-helper-to-set-an-interrupters-interrupt-mod.patch
 	patches.suse/xhci-remove-unnecessary-event_ring_deq-parameter-fro.patch
 	patches.suse/xhci-update-event-ring-dequeue-pointer-position-to-c.patch
