usb: typec: ucsi: properly register partner's PD device (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25449,6 +25449,7 @@
 	patches.suse/usb-typec-ucsi-Only-enable-supported-notifications.patch
 	patches.suse/usb-typec-ucsi-allow-non-partner-GET_PDOS-for-Qualco.patch
 	patches.suse/usb-typec-ucsi-limit-the-UCSI_NO_PARTNER_PDOS-even-f.patch
+	patches.suse/usb-typec-ucsi-properly-register-partner-s-PD-device.patch
 	patches.suse/usb-typec-ucsi-always-register-a-link-to-USB-PD-devi.patch
 	patches.suse/usb-typec-ucsi-simplify-partner-s-PD-caps-registrati.patch
 	patches.suse/usb-typec-ucsi-Never-send-a-lone-connector-change-ac.patch
