usb: typec: ucsi: extract code to read PD caps (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25452,6 +25452,7 @@
 	patches.suse/usb-typec-ucsi-properly-register-partner-s-PD-device.patch
 	patches.suse/usb-typec-ucsi-always-register-a-link-to-USB-PD-devi.patch
 	patches.suse/usb-typec-ucsi-simplify-partner-s-PD-caps-registrati.patch
+	patches.suse/usb-typec-ucsi-extract-code-to-read-PD-caps.patch
 	patches.suse/usb-typec-ucsi-Never-send-a-lone-connector-change-ac.patch
 	patches.suse/usb-misc-uss720-check-for-incompatible-versions-of-t.patch
 	patches.suse/usb-dwc3-pci-Don-t-set-linux-phy_charger_detect-prop.patch
