usb: typec: ucsi_glink: enable the UCSI_DELAY_DEVICE_PDOS quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25455,6 +25455,7 @@
 	patches.suse/usb-typec-ucsi-extract-code-to-read-PD-caps.patch
 	patches.suse/usb-typec-ucsi-support-delaying-GET_PDOS-for-device.patch
 	patches.suse/usb-typec-ucsi_glink-rework-quirks-implementation.patch
+	patches.suse/usb-typec-ucsi_glink-enable-the-UCSI_DELAY_DEVICE_PD.patch
 	patches.suse/usb-typec-ucsi-Never-send-a-lone-connector-change-ac.patch
 	patches.suse/usb-misc-uss720-check-for-incompatible-versions-of-t.patch
 	patches.suse/usb-dwc3-pci-Don-t-set-linux-phy_charger_detect-prop.patch
