usb: typec: ucsi_glink: enable the UCSI_DELAY_DEVICE_PDOS quirk on qcm6490 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25460,6 +25460,7 @@
 	patches.suse/usb-misc-uss720-check-for-incompatible-versions-of-t.patch
 	patches.suse/usb-dwc3-pci-Don-t-set-linux-phy_charger_detect-prop.patch
 	patches.suse/usb-typec-ucsi-Wait-20ms-before-reading-CCI-after-a-.patch
+	patches.suse/usb-typec-ucsi_glink-enable-the-UCSI_DELAY_DEVICE_P2.patch
 	patches.suse/usb-typec-ucsi_glink-drop-special-handling-for-CCI_B.patch
 	patches.suse/usb-gadget-function-Remove-usage-of-the-deprecated-i.patch
 	patches.suse/usb-gadget-dummy_hcd-Switch-to-hrtimer-transfer-sche.patch
