--- a/series.conf
+++ b/series.conf
@@ -25468,6 +25468,7 @@
 	patches.suse/usb-gadget-dummy_hcd-Set-transfer-interval-to-1-micr.patch
 	patches.suse/usb-typec-ucsi-add-callback-for-connector-status-upd.patch
 	patches.suse/usb-typec-ucsi-glink-move-GPIO-reading-into-connecto.patch
+	patches.suse/usb-typec-ucsi-glink-use-typec_set_orientation.patch
 	patches.suse/usb-dwc3-core-Skip-setting-event-buffers-for-host-on.patch
 	patches.suse/usb-xhci-prevent-potential-failure-in-handle_tx_even.patch
 	patches.suse/xhci-pci-Use-full-names-in-PCI-IDs-for-Intel-platfor.patch
