- ucsi_ops: adapt update_connector to kABI consistency   (git-fixes). - usb: typec: ucsi: add update_connector callback (git-fixes). - blacklist.conf: needed for infrastructure. kABI fix added - Refresh   patches.kabi/struct-ucsi_operations-use-padding-for-new-operation.patch. - Refresh patches.suse/paddings-add-paddings-to-TypeC-stuff.patch.

--- a/series.conf
+++ b/series.conf
@@ -25469,6 +25469,7 @@
 	patches.suse/usb-typec-ucsi-add-callback-for-connector-status-upd.patch
 	patches.suse/usb-typec-ucsi-glink-move-GPIO-reading-into-connecto.patch
 	patches.suse/usb-typec-ucsi-glink-use-typec_set_orientation.patch
+	patches.suse/usb-typec-ucsi-add-update_connector-callback.patch
 	patches.suse/usb-dwc3-core-Skip-setting-event-buffers-for-host-on.patch
 	patches.suse/usb-xhci-prevent-potential-failure-in-handle_tx_even.patch
 	patches.suse/xhci-pci-Use-full-names-in-PCI-IDs-for-Intel-platfor.patch
@@ -33570,6 +33571,7 @@
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
 	patches.kabi/struct-ucsi_operations-use-padding-for-new-operation.patch
 	patches.kabi/ucsi-glink-adapt-to-kABI-consistency.patch
+	patches.kabi/ucsi_ops-adapt-update_connector-to-kABI-consistency.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
