--- a/series.conf
+++ b/series.conf
@@ -25889,6 +25889,7 @@
 	patches.suse/drivers-core-synchronize-really_probe-and-dev_uevent.patch
 	patches.suse/tty-n_tty-Fix-buffer-offsets-when-lookahead-is-used.patch
 	patches.suse/serial-8250_dw-Don-t-use-struct-dw8250_data-outside-.patch
+	patches.suse/usb-typec-ucsi-glink-increase-max-ports-for-x1e80100.patch
 	patches.suse/USB-xen-hcd-Traverse-host-when-CONFIG_USB_XEN_HCD-is.patch
 	patches.suse/usb-typec-tcpm-fix-use-after-free-case-in-tcpm_regis.patch
 	patches.suse/usb-typec-tcpm-Ignore-received-Hard-Reset-in-TOGGLIN.patch
