--- a/series.conf
+++ b/series.conf
@@ -26928,6 +26928,7 @@
 	patches.suse/usb-dwc2-gadget-Don-t-write-invalid-mapped-sg-entrie.patch
 	patches.suse/Revert-usb-musb-da8xx-Set-phy-in-OTG-mode-by-default.patch
 	patches.suse/usb-typec-ucsi-Fix-null-pointer-dereference-in-trace.patch
+	patches.suse/usb-typec-Update-sysfs-when-setting-ops.patch
 	patches.suse/xhci-Add-a-quirk-for-writing-ERST-in-high-low-order.patch
 	patches.suse/usb-uas-set-host-status-byte-on-data-completion-erro.patch
 	patches.suse/usb-gadget-aspeed_udc-validate-endpoint-index-for-as.patch
