usb: typec: ucsi: Delay alternate mode discovery (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26929,6 +26929,7 @@
 	patches.suse/Revert-usb-musb-da8xx-Set-phy-in-OTG-mode-by-default.patch
 	patches.suse/usb-typec-ucsi-Fix-null-pointer-dereference-in-trace.patch
 	patches.suse/usb-typec-Update-sysfs-when-setting-ops.patch
+	patches.suse/usb-typec-ucsi-Delay-alternate-mode-discovery.patch
 	patches.suse/xhci-Add-a-quirk-for-writing-ERST-in-high-low-order.patch
 	patches.suse/usb-uas-set-host-status-byte-on-data-completion-erro.patch
 	patches.suse/usb-gadget-aspeed_udc-validate-endpoint-index-for-as.patch
