--- a/series.conf
+++ b/series.conf
@@ -26931,6 +26931,7 @@
 	patches.suse/usb-typec-Update-sysfs-when-setting-ops.patch
 	patches.suse/usb-typec-ucsi-Delay-alternate-mode-discovery.patch
 	patches.suse/xhci-Add-a-quirk-for-writing-ERST-in-high-low-order.patch
+	patches.suse/usb-typec-ucsi-don-t-retrieve-PDOs-if-not-supported.patch
 	patches.suse/usb-uas-set-host-status-byte-on-data-completion-erro.patch
 	patches.suse/usb-gadget-aspeed_udc-validate-endpoint-index-for-as.patch
 	patches.suse/xhci-Apply-XHCI_RESET_TO_DEFAULT-quirk-to-TGL.patch
