usb: typec: ucsi_acpi: Add LG Gram quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26106,6 +26106,7 @@
 	patches.suse/usb-gadget-printer-fix-races-against-disable.patch
 	patches.suse/usb-atm-cxacru-fix-endpoint-checking-in-cxacru_bind.patch
 	patches.suse/usb-ucsi-stm32-fix-command-completion-handling.patch
+	patches.suse/usb-typec-ucsi_acpi-Add-LG-Gram-quirk.patch
 	patches.suse/usb-musb-da8xx-fix-a-resource-leak-in-probe.patch
 	patches.suse/usb-typec-ucsi-glink-fix-child-node-release-in-probe.patch
 	patches.suse/usb-dwc3-core-remove-lock-of-otg-mode-during-gadget-.patch
