usb: typec: ucsi: move ucsi_acknowledge() from ucsi_read_error() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26936,6 +26936,7 @@
 	patches.suse/usb-uas-set-host-status-byte-on-data-completion-erro.patch
 	patches.suse/usb-gadget-aspeed_udc-validate-endpoint-index-for-as.patch
 	patches.suse/xhci-Apply-XHCI_RESET_TO_DEFAULT-quirk-to-TGL.patch
+	patches.suse/usb-typec-ucsi-move-ucsi_acknowledge-from-ucsi_read_.patch
 	patches.suse/usb-gadget-f_uac2-fix-non-newline-terminated-functio.patch
 	patches.suse/eeprom-digsy_mtc-Fix-93xx46-driver-probe-failure.patch
 	patches.suse/iio-Fix-the-sorting-functionality-in-iio_gts_build_a.patch
