pinctrl: qcom: msm: mark certain pins as invalid for interrupts (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9813,6 +9813,7 @@
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/pwm-Fix-invalid-state-detection.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
+	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
