pinctrl: amd: Clear GPIO debounce for suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9814,6 +9814,7 @@
 	patches.suse/pwm-Fix-invalid-state-detection.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
+	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
