ALSA: hda/realtek: Add quirk for Asus GA605K (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9705,6 +9705,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Asus-GU605C.patch
 	patches.suse/ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-PCM1-for.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-on-Latitude-5420.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Asus-GA605K.patch
 	patches.suse/gpio-pca953x-fix-wrong-error-probe-return-value.patch
 	patches.suse/gpio-mlxbf3-only-get-IRQ-for-device-instance-0.patch
 	patches.suse/scsi-elx-efct-Fix-memory-leak-in-efct_hw_parse_filter.patch
