ALSA: hda/realtek - Add mute LED support for HP Victus 15-fb2xxx (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9809,6 +9809,7 @@
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus--ce174b4.patch
 	patches.suse/ALSA-ad1816a-Fix-potential-NULL-pointer-deref-in-snd.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 	patches.suse/ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-select-SN.patch
