ALSA: hda/realtek: Add quirks for some Clevo laptops (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9727,6 +9727,7 @@
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
+	patches.suse/ALSA-hda-realtek-Add-quirks-for-some-Clevo-laptops.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
