ALSA: hda/realtek: Add quirk for ASUS ExpertBook B9403CVAR (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9812,6 +9812,7 @@
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus--ce174b4.patch
 	patches.suse/ALSA-usb-audio-Improve-filtering-of-sample-rates-on-.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASUS-ExpertBook-B9403.patch
 	patches.suse/ALSA-ad1816a-Fix-potential-NULL-pointer-deref-in-snd.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 	patches.suse/ASoC-Intel-SND_SOC_INTEL_SOF_BOARD_HELPERS-select-SN.patch
