--- a/series.conf
+++ b/series.conf
@@ -8889,6 +8889,7 @@
 	patches.suse/docs-doc-guide-clarify-latest-theme-usage.patch
 	patches.suse/Make-cc-option-work-correctly-for-the-Wno-xyzzy-patt.patch
 	patches.suse/ALSA-usb-audio-Add-Pioneer-DJ-DJM-V10-support.patch
+	patches.suse/ALSA-hda-tegra-Add-Tegra264-support.patch
 	patches.suse/ALSA-usb-audio-Rename-Pioneer-mixer-channel-controls.patch
 	patches.suse/ALSA-hda-realtek-Add-support-for-Acer-Helios-Laptops.patch
 	patches.suse/ALSA-hda-cs35l41-Fix-swapped-l-r-audio-channels-for-.patch
