--- a/series.conf
+++ b/series.conf
@@ -9811,6 +9811,7 @@
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus--ce174b4.patch
 	patches.suse/ALSA-usb-audio-Improve-filtering-of-sample-rates-on-.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASUS-ExpertBook-B9403.patch
