pinctrl: amd: Clear GPIO debounce for suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32924,6 +32924,7 @@
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
+	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 
 	########################################################
 	# end of sorted patches
