--- a/series.conf
+++ b/series.conf
@@ -32923,6 +32923,7 @@
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
+	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 
 	########################################################
 	# end of sorted patches
