restore UCSI_CONNECTOR_RESET_HARD definition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33579,6 +33579,7 @@
 	patches.kabi/struct-ucsi_operations-use-padding-for-new-operation.patch
 	patches.kabi/ucsi-glink-adapt-to-kABI-consistency.patch
 	patches.kabi/ucsi_ops-adapt-update_connector-to-kABI-consistency.patch
+	patches.kabi/restore-UCSI_CONNECTOR_RESET_HARD-definition.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
