--- a/series.conf
+++ b/series.conf
@@ -27645,6 +27645,7 @@
 	patches.suse/clk-qcom-gcc-sc8280xp-don-t-use-parking-clk_ops-for-.patch
 	patches.suse/usb-dwc3-Avoid-waking-up-gadget-during-startxfer.patch
 	patches.suse/usb-dwc3-core-update-LC-timer-as-per-USB-Spec-V3.2.patch
+	patches.suse/usb-typec-ucsi-Fix-the-partner-PD-revision.patch
 	patches.suse/staging-iio-frequency-ad9834-Validate-frequency-para.patch
 	patches.suse/iio-adc-ad7606-remove-frstdata-check-for-serial-mode.patch
 	patches.suse/iio-buffer-dmaengine-fix-releasing-dma-channel-on-er.patch
