usb: typec: ucsi: Fix busy loop on ASUS VivoBooks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28348,6 +28348,7 @@
 	patches.suse/usb-dwc2-drd-fix-clock-gating-on-USB-role-switch.patch
 	patches.suse/usb-xHCI-add-XHCI_RESET_ON_RESUME-quirk-for-Phytium-.patch
 	patches.suse/usb-xhci-fix-loss-of-data-on-Cadence-xHC.patch
+	patches.suse/usb-typec-ucsi-Fix-busy-loop-on-ASUS-VivoBooks.patch
 	patches.suse/USB-class-CDC-ACM-fix-race-between-get_serial-and-se.patch
 	patches.suse/USB-appledisplay-close-race-between-probe-and-comple.patch
 	patches.suse/USB-misc-cypress_cy7c63-check-for-short-transfer.patch
