ACPI: PRM: Reduce unnecessary printing to avoid user confusion (bsc#1246122).

--- a/series.conf
+++ b/series.conf
@@ -32952,7 +32952,7 @@
 	patches.suse/kdump-crashkernel-cma-update-Documentation.patch
 	patches.suse/kdump-wait-for-dma-to-time-out-when-using-cma.patch
 	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
-
+	patches.suse/ACPI-PRM-Reduce-unnecessary-printing-to-avoid-user-c.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
