ACPI: PRM: Reduce unnecessary printing to avoid user confusion (bsc#1246122).

--- a/series.conf
+++ b/series.conf
@@ -9854,6 +9854,7 @@
 	patches.suse/kdump-wait-for-dma-to-time-out-when-using-cma.patch
 +hare	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
 	patches.suse/s390-boot-Use-D__DISABLE_EXPORTS.patch
+	patches.suse/ACPI-PRM-Reduce-unnecessary-printing-to-avoid-user-c.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
