--- a/series.conf
+++ b/series.conf
@@ -50522,6 +50522,7 @@
 	patches.suse/x86-microcode-AMD-Return-bool-from-find_blobs_in_container.patch
 	patches.suse/x86-microcode-AMD-Make-__verify_patch_size-return-bool.patch
 	patches.suse/x86-microcode-AMD-Have-__apply_microcode_amd-return-bool.patch
+	patches.suse/x86-cpu-Introduce-new-microcode-matching-helper.patch
 	patches.suse/x86-amd_nb-Restrict-init-function-to-AMD-based-systems.patch
 	patches.suse/x86-amd_nb-Clean-up-early_is_amd_nb.patch
 	patches.suse/x86-Start-moving-AMD-node-functionality-out-of-AMD_NB.patch
